ENG-2187 browse endpoint filters draft or published pages basing on the query param
